[gd_scene load_steps=8 format=3 uid="uid://okm8e227rtkc"]

[ext_resource type="Texture2D" uid="uid://bocqu0538xgeh" path="res://UIImages/store.png" id="1_mdugw"]
[ext_resource type="Script" uid="uid://y2o6g5uybvmh" path="res://Scripts/UIScripts/store_page.gd" id="2_uymdt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uymdt"]
texture = ExtResource("1_mdugw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdugw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uymdt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7nvu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d1n8n"]

[node name="StorePage" type="Panel"]
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.16600001
anchor_right = 0.994
anchor_bottom = 0.99200004
offset_left = -0.19999981
offset_right = -446.37604
offset_bottom = -122.24805
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uymdt")
script = ExtResource("2_uymdt")

[node name="BuyFlashLightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 45.288
offset_top = 291.432
offset_right = 117.287994
offset_bottom = 319.432
theme_override_styles/normal = SubResource("StyleBoxEmpty_mdugw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mdugw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mdugw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mdugw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mdugw")

[node name="BuyDoorLockButton" type="Button" parent="."]
layout_mode = 0
offset_left = 226.288
offset_top = 293.432
offset_right = 298.288
offset_bottom = 319.432
theme_override_styles/normal = SubResource("StyleBoxEmpty_uymdt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uymdt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uymdt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_uymdt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uymdt")

[node name="BuyMotionLightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 394.288
offset_top = 291.432
offset_right = 466.288
offset_bottom = 320.432
theme_override_styles/normal = SubResource("StyleBoxEmpty_h7nvu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h7nvu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h7nvu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h7nvu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h7nvu")

[node name="BuyCameraButton" type="Button" parent="."]
layout_mode = 0
offset_left = 575.288
offset_top = 291.432
offset_right = 647.288
offset_bottom = 320.432
theme_override_styles/normal = SubResource("StyleBoxEmpty_d1n8n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d1n8n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d1n8n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d1n8n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d1n8n")

[connection signal="pressed" from="BuyFlashLightButton" to="." method="_on_buy_flash_light_button_pressed"]
[connection signal="pressed" from="BuyDoorLockButton" to="." method="_on_buy_door_lock_button_pressed"]
[connection signal="pressed" from="BuyMotionLightButton" to="." method="_on_buy_motion_light_button_pressed"]
[connection signal="pressed" from="BuyCameraButton" to="." method="_on_buy_camera_button_pressed"]
