extends Panel


func _on_buy_flash_light_button_pressed() -> void:
	print("Buy a flashlight")

func _on_buy_door_lock_button_pressed() -> void:
	print("Buy a doorlock")

func _on_buy_motion_light_button_pressed() -> void:
	print("Buy a motion light")

func _on_buy_camera_button_pressed() -> void:
	print("Buy a camera")
